contrast issue corrected

--- a/styles/base.css
+++ b/styles/base.css
@@ -120,6 +120,7 @@ main {
 }
 
 .herolabel p {
+    color: black;
     margin: 0;
     padding: .25rem;
     font-weight: 700;
